Update configuration files for the newer apache configuration.
This also combines the non-ssl and ssl parts into one configuration

--- a/virtualhost-disabled.conf
+++ b/virtualhost-disabled.conf
@@ -8,3 +8,11 @@
     Redirect permanent / https://%(destination_domain)s/
 
 </VirtualHost>
+
+<VirtualHost *:443>
+    ServerAdmin postmaster@haiku-os.org
+    ServerName %(apache_server_name)s
+
+    Redirect permanent / https://%(destination_domain)s/
+
+</VirtualHost>
