--- a/virtualhost.conf
+++ b/virtualhost.conf
@@ -2,6 +2,23 @@
 <IfDefine !NOSSL>
 <IfModule mod_wsgi.c>
 
+    <VirtualHost *:80>
+
+    ServerName %(apache_server_name)s
+
+    DocumentRoot %(project_path)s/htdocs-static
+
+    ErrorLog "|/usr/bin/httplog -z /var/log/apache2/dev_error_%%Y%%m%%d"
+    CustomLog "|/usr/bin/httplog -z /var/log/apache2/dev_transfer_%%Y%%m%%d" combined
+
+    Include "/etc/apache2/vhosts.d/blacklist.rules"
+
+    # redirect everything to Https
+    RewriteEngine On
+    RewriteCond %%{HTTPS} !=on
+    RewriteRule ^ https://%(apache_server_name)s%%{REQUEST_URI} [L,R=301]
+    </VirtualHost>
+
     <VirtualHost *:443>
 
     ServerName %(apache_server_name)s
@@ -30,23 +47,12 @@
 
     <Directory %(project_path)s/apache>
         WSGIProcessGroup trac_%(environment)s
-        Order deny,allow
-        Allow from all
+        Require all granted
     </Directory>
 
     <Directory %(project_path)s/htdocs-static>
-        Order deny,allow
-        Allow from all
+        Require all granted
     </Directory>
-
-#    <Location /login>
-#        AuthType Digest
-#        AuthName "haiku"
-#        AuthDigestDomain /
-#        AuthDigestProvider file
-#        AuthUserFile %(project_path)s/auth/trac.htdig
-#        Require valid-user
-#    </Location>
 
     Alias /robots.txt %(project_path)s/apache/robots.txt
     Alias /favicon.ico %(project_path)s/htdocs/site/favicon.ico
